--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,22 @@
     <p>Welcome to the chat app</p>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        let socket = io();
+    <script src="js/index.js">
+        // let socket = io();
 
-        socket.on('connect', () => {
-            console.log('Connected to server');
-        });
+        // // socket.on('connect', () => {
+        // //     console.log('Connected to server');
+        // // });
+        // socket.on('connect', function () {
+        //     console.log('Connected to server');
+        // });
 
-        socket.on('disconnect', () => {
-            console.log('Disconnected from server');
-        });
+        // // socket.on('disconnect', () => {
+        // //     console.log('Disconnected from server');
+        // // });
+        // socket.on('disconnect', function () {
+        //     console.log('Disconnected from server');
+        // });
     </script>
 </body>
 </html>
