--- a/public/index.html
+++ b/public/index.html
@@ -2,80 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Join | ChatApp</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Node Chat App</title>
 </head>
-<body class="chat">
-    <!-- <p>Welcome to the chat app</p> -->
-
-    <div class="chat__sidebar">
-        <h3>People</h3>
-        <div class="users"></div>
+<body class="centered-form">
+    <div class="centered-form__form">
+        <form action="/chat.html">
+            <div class="form-field">
+                <h3>Join a Chat</h3>
+            </div>
+            <div class="form-field">
+                <label>Display name</label>
+                <input type="text" name="name" autofocus />
+            </div>
+            <div class="form-field">
+                <label>Room name</label>
+                <input type="text" name="room" />
+            </div>
+            <div class="form-field">
+                <button>Join</button>
+            </div>
+        </form>
     </div>
-
-    <div class="chat__main">
-        <ol id="messages" class="chat__messages"></ol>
-
-        <div class="chat__footer">
-            <form id="message-form">
-                <input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
-                <button>Send</button>
-            </form>
-            <button id="send-location">Send location</button>
-        </div>
-    </div>
-
-    <script id="message-template" type="text/template">
-        <!-- <p>This is a tempalte</p> -->
-        <!-- {{text}} -->
-        <li class="message">
-            <div class="message__title">
-                <h4>{{from}}</h4>
-                <span>{{createdAt}}</span>
-            </div>
-            <div class="message__body">
-                <p>{{text}}</p>
-            </div>
-        </li>
-    </script>
-
-    <script id="location-message-template" type="text/template">
-        <li class="message">
-            <div class="message__title">
-                <h4>{{from}}</h4>
-                <span>{{createdAt}}</span>
-            </div>
-            <div class="message__body">
-                <p>
-                    <a href="{{url}}" target="_blank">My current location</a>
-                </p>
-            </div>
-        </li>
-    </script>
-
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/libs/jquery-3.3.1.min.js"></script>
-    <script src="/js/libs/moment.min.js"></script>
-    <script src="/js/libs/mustache.js"></script>
-    <script src="js/index.js">
-        // let socket = io();
-
-        // // socket.on('connect', () => {
-        // //     console.log('Connected to server');
-        // // });
-        // socket.on('connect', function () {
-        //     console.log('Connected to server');
-        // });
-
-        // // socket.on('disconnect', () => {
-        // //     console.log('Disconnected from server');
-        // // });
-        // socket.on('disconnect', function () {
-        //     console.log('Disconnected from server');
-        // });
-    </script>
 </body>
 </html>
