--- a/public/chat.html
+++ b/public/chat.html
@@ -12,7 +12,7 @@
 
     <div class="chat__sidebar">
         <h3>People</h3>
-        <div class="users"></div>
+        <div id="users"></div>
     </div>
 
     <div class="chat__main">
@@ -60,6 +60,7 @@
     <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/libs/moment.min.js"></script>
     <script src="/js/libs/mustache.js"></script>
+    <script src="/js/libs/deparam.js"></script>
     <!-- <script src="js/index.js"> -->
     <script src="js/chat.js">
         // let socket = io();
